dev/testdata/1-route-bar.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: bar
spec:
  - name: bar
    match:
      path: "/bar"
    direct_response:
      status: 200
      body:
        inline_string: "{\"message\":\"bar\"}"
