dev/testdata/1-route-demo1.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Route
metadata:
  name: demo1
spec:
  - name: demo1
    match:
      path: "/demo1"
    direct_response:
      status: 200
      body:
        inline_string: "{\"message\":\"demo1\"}"
