dev/testdata/1-secret-dev3-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvekNDQW91Z0F3SUJBZ0lVV1gyUS9EMU1JdCt6MFZMbncxRFJ4WVFLZjFnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2JERUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4R0RBV0JnTlZCQU1NCkQyUmxkak11YTJGaGMyOXdjeTVwYnpBZUZ3MHlOVEExTVRZd05qTTNNVGRhRncweU5qQTFNVFl3TmpNM01UZGEKTUd3eEN6QUpCZ05WQkFZVEFsVlRNUTR3REFZRFZRUUlEQVZUZEdGMFpURU5NQXNHQTFVRUJ3d0VRMmwwZVRFVgpNQk1HQTFVRUNnd01UM [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRREZpQU0xNmpFbEt5OTMKWVJJa0M4MkZ1eHBIME00OFJRS01MLzRkWUp4TVFINW5zWWpLKy90OFo3bG5aZXRkbWtIUlc0OVV6VGNqZEtZSQpnb2x0Yk1hUUEyY2l3c1pLM3B6VlBtdlBVQ2JzemsrWHUwSkIvUThRTWVEODIzNVpSU085a25SOG9tbzZiSDE1ClVTWXIwSlFjMTY0QUdhajd3ZmdZRGREMk1OVmJibUg4V0FHeFVHZ0REd0V6MGpWN2R6djVUWDhiWnRPUklpUVoKTUNCNUxkbjJ2NmhzL0pYOHpITSt1N0ZwZ05PNlJ1UWx1aklGRUNZQTZDRkNLVE5YaG14MVZNYkRrc3ROV3dvcQpCVDFvZHZrQW15SXZ5c [...]
kind: Secret
metadata:
  name: dev3-kaasops-io
  annotations:
    envoy.kaasops.io/domains: dev3.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
