dev/testdata/1-secret-example-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURyRENDQXBTZ0F3SUJBZ0lVWDNReXJrRmx1S0RRams1NjlrREY0dGV2R1lFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2J6RUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4R3pBWkJnTlZCQU1NCkVtVjRZVzF3YkdVdWEyRmhjMjl3Y3k1cGJ6QWVGdzB5TlRBME16QXhNakkzTURKYUZ3MHlOakEwTXpBeE1qSTMKTURKYU1HOHhDekFKQmdOVkJBWVRBbFZUTVE0d0RBWURWUVFJREFWVGRHRjBaVEVOTUFzR0ExVUVCd3dFUTJsMAplVEVWTUJNR0ExVUVDZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ3ZmZXBFTk5jWWpsZWUKSndiMUhDbzJCMWFXaUx5SGhzK1VqeGUwOUQ2VEZMSzRieU9uMnMvNHFkeGN3U2tYaE1MM2EzQ3RHZFRwSTZPRwpuUFJqM3pFL1BBL3dNWkd6dnViVjVoN3ZveTR2d3d5akd3YTBaSG1kNU9tVFkzM2VEYTN1a0JQWENmaUUwQnpvClh1ZExXVHRkRXVUbnZVbEt2TjFXczdvam9PL1FkVStZamRtYzhjZHVWaXBWSWFTSkswR3FDaWZPeko4dkdCU3UKdzhpckw4UGxCeEZnSU5lYWdHU1g4NlBsbW9xN2M4NnNCcWpaQTFIM3BKTCtybDEvQUd1Q3JPKy9XdzhZbFhZQworTFRwdEM2RjluMWp6Z [...]
kind: Secret
metadata:
  name: example-kaasops-io
  annotations:
    envoy.kaasops.io/domains: example.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
