dev/testdata/1-secret-example2-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURyekNDQXBlZ0F3SUJBZ0lVQzZKV3Z5WTRCcmMxYXJYTFp4eTM5YmdWaHdzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2NERUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4SERBYUJnTlZCQU1NCkUyVjRZVzF3YkdVeUxtdGhZWE52Y0hNdWFXOHdIaGNOTWpVd05ETXdNVEl5T1RRNFdoY05Nall3TkRNd01USXkKT1RRNFdqQndNUXN3Q1FZRFZRUUdFd0pWVXpFT01Bd0dBMVVFQ0F3RlUzUmhkR1V4RFRBTEJnTlZCQWNNQkVOcApkSGt4RlRBVEJnTlZCQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRExrV2NPMmtKU1ZLZTgKMXdUaVo5YXZmZEVNanFVb0NVZElLRlRmY2Vkd3Fjd0trbTV5OHFyemQrSW16UlZCQXFoU29obHFncHRMYzZCcApxcDNzK2ZQWElBY2xKek1LU0ViZlN3cXhnTkd1dXJ0ZGlVNmpVdGhIZS8wK0FyazhidFp1T0hoRnFML2lka1dDCmdsNDZwMngyTlc3RG1zRUFzMXdzaUd1dk1lb1pvOUcvekxNdmdlK0lqOFVqd2pvQml2bWZLUHBNNGR1NkJzVUEKRGUyS2FreVJ4eUM5MzIvS2k1d0RKMVhGYUdGek9XUlMrdUNqSXkrUUFxTmF2KzVHdVBlMVhTUmh6cXJvYmZtKwovbzlMcW1oSVZzckgrT [...]
kind: Secret
metadata:
  name: example2-kaasops-io
  annotations:
    envoy.kaasops.io/domains: example2.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
