dev/testdata/2-http-template.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: http-template
spec:
  listener:
    name: http
  accessLogConfig:
    name: access-log-config
  additionalHttpFilters:
    - name: http-filter
  virtualHost:
    domains:
      - "*"
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello from template\"}"
