dev/testdata/2-https-template-access-log.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: https-template-access-log
  annotations:
    envoy.kaasops.io/description: "HTTPS virtual service template with TLS auto-discovery"
spec:
  listener:
    name: https
  accessLog:
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
      log_format:
        json_format:
          message: "%LOCAL_REPLY_BODY%"
          status: "%RESPONSE_CODE%"
          duration: "%DURATION%"
          remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
          x_real_ip: "%REQ(X-Real-IP)%"
          request_start_time: "%START_TIME%"
          bytes_sent: "%BYTES_SENT%"
          http_referer: "%REQ(Referer)%"
          http_user_agent: "%REQ(User-Agent)%"
  additionalHttpFilters:
    - name: http-filter
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    name: test-virtual-host
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello from template\"}"
