dev/testdata/2-template-extra-fields.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: extra-fields-template
spec:
  listener:
    name: https
  accessLogConfig:
    name: access-log-config
  additionalHttpFilters:
    - name: http-filter
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    request_headers_to_add:
      - append_action: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: X-Field
          value: "{{ .X_Field }}"
      - append_action: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: X-Field-2
          value: "{{ .X_Field_2 }}"
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello from template\"}"
  extraFields:
    - name: X_Field
      type: string
      description: Demo field
      required: true
    - name: X_Field_2
      type: string
      description: Demo field 2
      required: true
