dev/testdata/secret-dev4-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvekNDQW91Z0F3SUJBZ0lVSWUvRWhEdVZZMVkycktoK3g1UGVnSE9ucVo0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd2JERUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4R0RBV0JnTlZCQU1NCkQyUmxkalF1YTJGaGMyOXdjeTVwYnpBZUZ3MHlOVEExTVRZd05qTTNNakZhRncweU5qQTFNVFl3TmpNM01qRmEKTUd3eEN6QUpCZ05WQkFZVEFsVlRNUTR3REFZRFZRUUlEQVZUZEdGMFpURU5NQXNHQTFVRUJ3d0VRMmwwZVRFVgpNQk1HQTFVRUNnd01UM [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQ2x6RVBLV2NETmdDSzAKejZiK3h5ZWZEN2tFbW1xajRWNE52RjVlV2xSN0tuaStNOWxjbnNrZlEyaUV4VjFwdU5RSllqN1pTTVU3SVZkKwpYYm1iS2hnN3A0TFlSQm0wZUVaMFZvdWgxc1dDZmVjR0hRZ05KZ1pHVklkR1N1TzZUWmZvZVc4SlVYeUh3dVk3CllIUDdpK0hwVFY1MXgvaFp0Mkd0dGFETVMzTXFWQWl5Uzkxc2RMSGduSm1TTHltQTV5Wi9RQWpMdE1NYjZjMDQKYXJTQUVhZGEzak1yZysyV1hKaGIva2JrVFYydVNXcm5Ma3pIQ1hiOFNUSHJQSU1tMkNJVTZ2RzExR0phZUgwKwp5OTZ1R09OZDlmeGF1b [...]
kind: Secret
metadata:
  name: dev4-kaasops-io
  annotations:
    envoy.kaasops.io/domains: dev4.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
