dev/testdata/secret-dev5-kaasops-io.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvekNDQW91Z0F3SUJBZ0lVR0F5eXNLUHdGd0pmOFl2dnZ4K2x2aW5LVXRZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2JERUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eERUQUxCZ05WQkFzTUJGVnVhWFF4R0RBV0JnTlZCQU1NCkQyUmxkalV1YTJGaGMyOXdjeTVwYnpBZUZ3MHlOVEExTVRZd05qTTNNalJhRncweU5qQTFNVFl3TmpNM01qUmEKTUd3eEN6QUpCZ05WQkFZVEFsVlRNUTR3REFZRFZRUUlEQVZUZEdGMFpURU5NQXNHQTFVRUJ3d0VRMmwwZVRFVgpNQk1HQTFVRUNnd01UM [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQzg5VXVFWHhhSGJqNmYKTmg5dnUwY24rNWRNaHdZVHhQaXhLdXdyQVV6ZmdNa3JjZUsvQ0diZmpkNVZ3RnJ3SzFOS09IWnJUOWFTQ3BCbApvbnZRK2hialdwUGMya0ZHaFBYOVNGb0RyQnJvMVVvUStUSTN1N0Q3SkpMMWJLaUhmbzV0QUtWNzNSZm8vcmRtCmRpVU5jT2Noa1RZeGwwOXpvaVNOUzh5TlBOUlpFTTNHQ0pIV01IMFNmZENlcldFTHJZeVlNSkc4TG5kOXYrYmcKOVg5bEhyeDJENGZEeksvdGdZYnZRM1lDQzlYSEV1OGIxc0MyQSszdnY0Wi9KZDc4eUE4Rk9GUWJMcGcxdFVWdApnQnNhbW16cndWeEdDS [...]
kind: Secret
metadata:
  name: dev5-kaasops-io
  annotations:
    envoy.kaasops.io/domains: dev5.kaasops.io
  labels:
    envoy.kaasops.io/secret-type: sds-cached
type: kubernetes.io/tls
