dev/testdata/test-vs-http.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: test-vs-http
  annotations:
    envoy.kaasops.io/node-id: test
    envoy.kaasops.io/editable: "true"
    envoy.kaasops.io/description: "Editable HTTP virtual service with multiple routes for test environment"
  labels:
    exc-name: vs-http
    exc-access-group: test
spec:
  listener:
    name: http
  additionalRoutes:
    - name: bar
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  accessLogConfig:
    name: access-log-config
  virtualHost:
    name: vs-http-virtual-host
    domains:
      - test.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"root\"}"
      - match:
          prefix: "/foo"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"foo\"}"
