dev/testdata/vs-tcp-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo
  labels:
    app: tcp-echo
    service: tcp-echo
spec:
  ports:
    - name: tcp
      port: 9000
    - name: tcp-other
      port: 9001
  # Port 9002 is omitted intentionally for testing the pass through filter chain.
  selector:
    app: tcp-echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo
      version: v1
  template:
    metadata:
      labels:
        app: tcp-echo
        version: v1
    spec:
      containers:
        - name: tcp-echo
          image: docker.io/istio/tcp-echo-server:1.3
          imagePullPolicy: IfNotPresent
          args: [ "9000,9001,9002", "hello" ]
          ports:
            - containerPort: 9000
            - containerPort: 9001
---
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: cluster1
spec:
  name: cluster1
  connect_timeout: 30s
  type: LOGICAL_DNS
  dns_lookup_family: V4_ONLY
  load_assignment:
    cluster_name: cluster1
    endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: tcp-echo
                  port_value: 9001
---
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: tcp-proxy
spec:
  name: tcp-proxy
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 7777
  filter_chains:
    - filters:
        - name: envoy.filters.network.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            stat_prefix: destination
            cluster: cluster1
---
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: dev-vs-tcp-proxy
  annotations:
    envoy.kaasops.io/node-id: dev
  labels:
    exc-name: vs-tcp-proxy
    exc-access-group: dev
spec:
  listener:
    name: tcp-proxy
